--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "license": "MIT",
   "dependencies": {
     "blueimp-md5": "^2.3.0",
+    "bootstrap": "^3.3.7",
     "vue": "^1.0.25",
     "vue-resource": "^0.9.3",
-    "vue-router": "^0.7.13"
+    "vue-router": "^0.7.13",
+    "vue-strap": "^1.1.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
