--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
   "license": "MIT",
   "dependencies": {
     "blueimp-md5": "^2.3.0",
-    "bootstrap": "^3.3.7",
     "vue": "^1.0.25",
     "vue-resource": "^0.9.3",
-    "vue-router": "^0.7.13",
-    "vue-strap": "^1.1.3"
+    "vue-router": "^0.7.13"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
@@ -30,16 +28,20 @@
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-runtime": "^5.8.34",
+    "callback-loader": "^0.2.4",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.3.0",
     "html-webpack-plugin": "^2.22.0",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.2.0",
     "vue-loader": "^7.2.0",
+    "vue-materialize": "^0.2.0",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.1"
   },
